8302320: AsyncGetCallTrace obtains too few frames in sanity test

Backport-of: db483a38a815f85bd9668749674b5f0f6e4b27b4